Documentation update (and some restructuring for release prep)